Java: JSE: fix tests