@@ -5,29 +5,25 @@ import org.junit.jupiter.api.Test;
 
 import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.FileReader;
 import java.io.IOException;
-import java.io.PrintStream;
-import java.util.Arrays;
+import java.nio.file.Files;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Чтение файла с помощью BufferedReader.
  */
 class ByBufferedReader {
-    private static final List<String> expLines = Arrays.asList("FirstLine", "SecondLine");
+    private static final List<String> expLines = List.of("FirstLine", "SecondLine");
     private static File file;
 
     @BeforeEach
     void setUp() throws Exception {
         file = File.createTempFile(ByRandomAccessFile.class.getSimpleName(), ".tmp");
         file.deleteOnExit();
-        try (var out = new PrintStream(new FileOutputStream(file))) {
-            expLines.forEach(out::print);
-        }
+        Files.write(file.toPath(), expLines);
     }
 
     /**
@@ -35,14 +31,14 @@ class ByBufferedReader {
      */
     @Test
     void lineByLine() throws IOException {
-        var reader = new BufferedReader(new FileReader(file));
         var sb = new StringBuilder();
-        String line;
-        while ((line = reader.readLine()) != null) {
-            sb.append(line);
-            sb.append('\n');
+        try (var reader = new BufferedReader(new FileReader(file))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                sb.append(line);
+                sb.append('\n');
+            }
         }
-        reader.close();
-        assertEquals("FirstLine\nSecondLine\n", sb.toString());
+        assertThat(sb.toString()).isEqualTo("FirstLine\nSecondLine\n");
     }
 }
